--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ function getASIN() {
 }
 
 const ASIN = getASIN();
-const PDF_URL = `https://example.com/files/${ASIN}.pdf`; // public PDF URL
+const PDF_URL = `https://okgpt.pages.dev/filebookpdf.pdf`; // public PDF URL
 
 // -------- AMAZON COVER (ASIN BASED) --------
 const cover = document.getElementById("bookCover");
