--- a/index.html
+++ b/index.html
@@ -1,216 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Download Book PDF</title>
-  <meta name="description" content="Download the PDF version of this book using Amazon ASIN. No API required." />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Download PDF — The Housemaid by Freida McFadden</title>
 
-  <!-- Tailwind CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- SEO -->
+  <meta name="description" content="Download The Housemaid by Freida McFadden (PDF). ASIN: B0XXXXX. Safe and fast download.">
+
+  <!-- Styles -->
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f6f6f6;
+      color: #333;
+    }
+    .container {
+      max-width: 600px;
+      margin: auto;
+      padding: 20px;
+      text-align: center;
+      background: #fff;
+      box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+      border-radius: 8px;
+      margin-top: 50px;
+    }
+    img.cover {
+      max-width: 300px;
+      border-radius: 6px;
+    }
+    h1 {
+      font-size: 24px;
+      margin-top: 15px;
+    }
+    p.desc {
+      font-size: 16px;
+      margin: 15px 0;
+      line-height: 1.6;
+    }
+    .btn {
+      display: inline-block;
+      padding: 15px 30px;
+      margin: 10px;
+      background: #0077cc;
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 5px;
+      transition: 0.3s;
+    }
+    .btn:hover {
+      background: #005fa3;
+    }
+    .asin {
+      font-size: 14px;
+      color: #555;
+      margin-top: 8px;
+    }
+  </style>
 </head>
-<body class="bg-gradient-to-br from-indigo-50 via-white to-purple-50 min-h-screen flex items-center justify-center px-4">
+<body>
 
-<main class="max-w-5xl w-full bg-white/90 backdrop-blur rounded-3xl shadow-2xl grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-10 p-5 sm:p-6 md:p-10">
-
-  <!-- Book Cover -->
-  <div class="flex justify-center items-center">
-    <img id="bookCover" class="w-44 sm:w-52 md:w-72 rounded-xl shadow-lg" alt="Book Cover" loading="lazy" decoding="async" />
-  </div>
-
-  <!-- Content -->
-  <div class="flex flex-col justify-center">
-    <h1 id="bookTitle" class="text-2xl sm:text-3xl font-bold mb-4">Your Book Title</h1>
-
-    <p class="text-gray-600 mb-6 leading-relaxed">
-      Download the complete PDF version of this book. Instant access, mobile-friendly, and high-quality format.
+  <div class="container">
+    <img class="cover" src="COVER_IMAGE_URL" alt="The Housemaid by Freida McFadden">
+    <h1>Download PDF — The Housemaid</h1>
+    <p class="desc">
+      Experience the gripping psychological thriller <strong>The Housemaid by Freida McFadden</strong>.  
+      Enter a world of secrets, suspense, and dark twists. This PDF download is fast & safe.
     </p>
 
-    <button id="openPdf" class="w-full sm:w-auto bg-gradient-to-r from-indigo-600 to-purple-600 text-white px-6 py-4 rounded-xl text-base sm:text-lg font-semibold hover:from-indigo-700 hover:to-purple-700 transition shadow-lg">
-      Download PDF
-    </button>
+    <!-- AMAZON ASIN -->
+    <p class="asin">
+      📌 ASIN: <a href="https://www.amazon.com/dp/ASIN_NUMBER" target="_blank">ASIN_NUMBER</a>
+    </p>
 
-    <!-- Rating -->
-    <div class="flex items-center gap-4 mt-6 flex-wrap">
-      <div id="ratingValue" class="text-3xl font-bold">4.8</div>
-      <div>
-        <div class="text-yellow-500">★★★★★</div>
-        <div class="text-xs text-gray-500">Based on <span id="downloadCount">1</span> downloads</div>
-      </div>
-    </div>
+    <!-- DOWNLOAD BUTTON -->
+    <a class="btn" href="PDF_DOWNLOAD_LINK" download>
+      📥 Download PDF
+    </a>
 
-    <!-- Trust -->
-    <div class="flex flex-wrap gap-4 text-sm text-gray-700 mt-6">
-      <span>🛡 Secure</span>
-      <span>⚡ Instant</span>
-      <span>📱 Mobile Friendly</span>
-      <span>🌐 Official Website</span>
-      <span>📘 Publisher Approved</span>
-    </div>
-
-    
-    </div>
-
-    <!-- Reviews -->
-    <section class="mt-8">
-      <h2 class="font-semibold mb-3">Reader Reviews</h2>
-      <div id="reviewBox" class="bg-gradient-to-br from-gray-50 to-white rounded-xl p-4 text-sm text-gray-700 shadow-sm">
-        “Very clear and helpful. Highly recommended.”
-      </div>
-    </section>
-
-    <!-- Verification Seals -->
-    <div class="mt-8 grid grid-cols-2 sm:grid-cols-4 gap-3 sm:gap-4 text-center text-xs">
-      <div class="border border-indigo-100 rounded-xl p-3 bg-indigo-50 text-indigo-700 font-medium">✔ Verified Source</div>
-      <div class="border border-indigo-100 rounded-xl p-3 bg-indigo-50 text-indigo-700 font-medium">🔒 Secure Download</div>
-      <div class="border border-indigo-100 rounded-xl p-3 bg-indigo-50 text-indigo-700 font-medium">🛡 Malware Free</div>
-      <div class="border border-indigo-100 rounded-xl p-3 bg-indigo-50 text-indigo-700 font-medium">📄 PDF Certified</div>
-    </div>
-
-      </div>
-</main>
-
-<!-- PDF Reader Modal -->
-<div id="pdfModal" class="fixed inset-0 bg-black/70 hidden items-center justify-center z-50">
-  <div class="bg-white w-full max-w-4xl h-[90vh] rounded-2xl shadow-xl flex flex-col overflow-hidden relative">
-
-    <!-- Ad Banner 480x60 -->
-    <div class="flex items-center justify-center bg-gray-100 border-b p-2">
-      <div class="flex items-center justify-center text-sm text-gray-600 bg-gray-300" style="width:480px;height:60px;">
-        Advertisement 480 × 60
-      </div>
-    </div>
-
-    <!-- PDF Viewer -->
-    <iframe src="https://example.com/files/${ASIN}.pdf#toolbar=0" class="flex-1 w-full" loading="lazy"></iframe>
-
-    <!-- Close Button -->
-    <button id="closePdf" class="absolute top-4 right-4 bg-black text-white rounded-full w-10 h-10 flex items-center justify-center">✕</button>
+    <!-- OPTIONAL: AMAZON BUY BUTTON -->
+    <a class="btn" href="https://www.amazon.com/dp/ASIN_NUMBER" target="_blank">
+      🛒 View on Amazon
+    </a>
   </div>
-</div>
-
-
-
-    <!-- PDF Viewer -->
-    
-
-    <!-- Close Button -->
-    <button id="closePdf" class="absolute top-4 right-4 bg-black text-white rounded-full w-10 h-10 flex items-center justify-center">✕</button>
-  </div>
-</div>
-
-
-
-<script>
-/* =====================================
-   FINAL PRODUCTION SCRIPT (NO API)
-   Clean • Lightweight • Conversion Ready
-===================================== */
-
-// -------- CONFIG --------
-// -------- FINAL CONFIG (ASIN FROM SEO-FRIENDLY URL OR QUERY) --------
-// Supported URLs:
-// /book/B012345678
-// /book/B012345678/
-// ?asin=B012345678
-
-function getASIN() {
-  const pathMatch = window.location.pathname.match(/\/book\/([A-Z0-9]{10})/i);
-  if (pathMatch && pathMatch[1]) return pathMatch[1].toUpperCase();
-
-  const params = new URLSearchParams(window.location.search);
-  const qAsin = params.get("asin");
-  if (qAsin) return qAsin.toUpperCase();
-
-  return "B012345678"; // fallback
-}
-
-const ASIN = getASIN();
-const PDF_URL = `https://okgpt.pages.dev/filebookpdf.pdf`; // public PDF URL
-
-// -------- AMAZON COVER (ASIN BASED) --------
-const cover = document.getElementById("bookCover");
-if (cover) {
-  cover.src = `https://images-na.ssl-images-amazon.com/images/P/${ASIN}.01.LZZZZZZZ.jpg`;
-  cover.onerror = () => {
-    cover.src = "https://dummyimage.com/400x600/4f46e5/ffffff&text=Book+Cover";
-  };
-}
-
-// -------- PDF READER MODAL (NORMAL) --------
-const modal = document.getElementById("pdfModal");
-const closeBtn = document.getElementById("closePdf");
-
-if (downloadBtn && modal) {
-  downloadBtn.addEventListener("click", () => {
-    modal.classList.remove("hidden");
-    modal.classList.add("flex");
-  });
-}
-
-if (closeBtn && modal) {
-  closeBtn.addEventListener("click", () => {
-    modal.classList.add("hidden");
-    modal.classList.remove("flex");
-  });
-});
-});
-});
-}
-
-if (closeBtn && modal) {
-  closeBtn.addEventListener("click", () => {
-    modal.classList.add("hidden");
-    modal.classList.remove("flex");
-  });
-}
-if (downloadBtn) {
-  downloadBtn.addEventListener("click", () => {
-    window.location.href = PDF_URL;
-  });
-}
-
-// -------- SOCIAL PROOF (SAFE RANDOMIZATION) --------
-const ratingEl = document.getElementById("ratingValue");
-const downloadsEl = document.getElementById("downloadCount");
-
-if (ratingEl) {
-  ratingEl.innerText = (Math.random() * (4.9 - 4.6) + 4.6).toFixed(1);
-}
-
-if (downloadsEl) {
-  downloadsEl.innerText = (Math.floor(Math.random() * 9000) + 1000).toLocaleString();
-}
-
-// -------- REVIEW ROTATOR --------
-const reviews = [
-  "Very clear and helpful. Highly recommended.",
-  "Easy to read and well structured.",
-  "Worth downloading, practical content.",
-  "Professional quality and easy to understand.",
-  "Saved me a lot of time."
-];
-
-let reviewIndex = 0;
-const reviewBox = document.getElementById("reviewBox");
-
-if (reviewBox) {
-  setInterval(() => {
-    reviewBox.innerText = `“${reviews[reviewIndex]}”`;
-    reviewIndex = (reviewIndex + 1) % reviews.length;
-  }, 4000);
-}
-
-// -------- BASIC SOFT PROTECTION --------
-document.addEventListener("contextmenu", e => e.preventDefault());
-document.addEventListener("keydown", e => {
-  if ((e.ctrlKey || e.metaKey) && ["s", "p"].includes(e.key.toLowerCase())) {
-    e.preventDefault();
-  }
-});
-</script>
-
-
 
 </body>
 </html>
