--- a/index.html
+++ b/index.html
@@ -1,91 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Download PDF — The Housemaid by Freida McFadden</title>
-
-  <!-- SEO -->
-  <meta name="description" content="Download The Housemaid by Freida McFadden (PDF). ASIN: B0XXXXX. Safe and fast download.">
-
-  <!-- Styles -->
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f6f6f6;
-      color: #333;
-    }
-    .container {
-      max-width: 600px;
-      margin: auto;
-      padding: 20px;
-      text-align: center;
-      background: #fff;
-      box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-      border-radius: 8px;
-      margin-top: 50px;
-    }
-    img.cover {
-      max-width: 300px;
-      border-radius: 6px;
-    }
-    h1 {
-      font-size: 24px;
-      margin-top: 15px;
-    }
-    p.desc {
-      font-size: 16px;
-      margin: 15px 0;
-      line-height: 1.6;
-    }
-    .btn {
-      display: inline-block;
-      padding: 15px 30px;
-      margin: 10px;
-      background: #0077cc;
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 5px;
-      transition: 0.3s;
-    }
-    .btn:hover {
-      background: #005fa3;
-    }
-    .asin {
-      font-size: 14px;
-      color: #555;
-      margin-top: 8px;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Download Book PDF</title>
+  <meta name="description" content="Download the official PDF version of this book. Secure, instant access with verified reader reviews." />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gradient-to-br from-sky-50 via-indigo-50 to-fuchsia-50 min-h-screen flex items-center justify-center px-4">
 
-  <div class="container">
-    <img class="cover" src="COVER_IMAGE_URL" alt="The Housemaid by Freida McFadden">
-    <h1>Download PDF — The Housemaid</h1>
-    <p class="desc">
-      Experience the gripping psychological thriller <strong>The Housemaid by Freida McFadden</strong>.  
-      Enter a world of secrets, suspense, and dark twists. This PDF download is fast & safe.
-    </p>
+  <!-- Main Card -->
+  <main class="max-w-5xl w-full bg-white/95 backdrop-blur-md shadow-[0_25px_60px_-15px_rgba(79,70,229,0.35)] rounded-3xl p-6 md:p-10 grid md:grid-cols-2 gap-8 md:gap-12">
 
-    <!-- AMAZON ASIN -->
-    <p class="asin">
-      📌 ASIN: <a href="https://www.amazon.com/dp/ASIN_NUMBER" target="_blank">ASIN_NUMBER</a>
-    </p>
+    <!-- Book Image -->
+    <div class="flex items-center justify-center">
+      <img id="bookCover" class="rounded-2xl shadow-md w-56 md:w-72 h-auto" alt="Book Cover" />
+    </div>
 
-    <!-- DOWNLOAD BUTTON -->
-    <a class="btn" href="PDF_DOWNLOAD_LINK" download>
-      📥 Download PDF
-    </a>
+    <!-- Book Info -->
+    <div class="flex flex-col justify-center">
+      <h1 id="bookTitle" class="text-2xl md:text-3xl font-bold mb-3">PDF Download</h1>
 
-    <!-- OPTIONAL: AMAZON BUY BUTTON -->
-    <a class="btn" href="https://www.amazon.com/dp/ASIN_NUMBER" target="_blank">
-      🛒 View on Amazon
-    </a>
+      <p id="bookDescription" class="text-gray-600 mb-5 leading-relaxed">
+        Download the official PDF version of this book. Instant access, high-quality content, and easy reading on any device.
+      </p>
+
+      <!-- Primary CTA -->
+      <button id="openPdf" class="w-full md:w-auto bg-gradient-to-r from-indigo-600 via-blue-600 to-fuchsia-600 text-white px-6 py-4 rounded-xl text-lg font-semibold hover:from-indigo-700 hover:via-blue-700 hover:to-fuchsia-700 transition shadow-lg">
+        Download PDF
+      </button>
+
+      <!-- Rating & Download Counter -->
+      <div class="flex items-center gap-4 mt-6 mb-4">
+        <div class="text-3xl font-bold" id="ratingValue">4.8</div>
+        <div>
+          <div class="text-amber-500 text-lg">★★★★★</div>
+          <div class="text-xs text-gray-500">Based on <strong id="downloadCount">1</strong> downloads</div>
+        </div>
+      </div>
+
+      <!-- Trust Strip -->
+      <div class="flex flex-wrap gap-4 text-sm text-gray-700 mt-4">
+        <span>🛡️ Secure download</span>
+        <span>📧 No spam</span>
+        <span>⚡ Instant access</span>
+      </div>
+
+      <!-- Reviews -->
+      <section class="mt-8">
+        <h2 class="text-lg font-semibold mb-4">What readers say</h2>
+        <div id="reviewSlider" class="relative">
+          <div class="review bg-gray-50 p-4 rounded-xl">
+            <p class="review-text text-sm text-gray-700"></p>
+            <p class="text-xs text-green-600 mt-2">★★★★★ — 🧾 Verified Download</p>
+          </div>
+          <div class="review bg-gray-50 p-4 rounded-xl hidden">
+            <p class="review-text text-sm text-gray-700"></p>
+            <p class="text-xs text-green-600 mt-2">★★★★★ — 🧾 Verified Download</p>
+          </div>
+          <div class="review bg-gray-50 p-4 rounded-xl hidden">
+            <p class="review-text text-sm text-gray-700"></p>
+            <p class="text-xs text-green-600 mt-2">★★★★★ — 🧾 Verified Download</p>
+          </div>
+        </div>
+      </section>
+    </div>
+  </main>
+
+  <!-- PDF Reader Modal -->
+  <div id="pdfModal" class="fixed inset-0 bg-slate-900/80 backdrop-blur-md hidden items-center justify-center z-50">
+    <div class="bg-white w-full max-w-4xl h-[90vh] rounded-3xl shadow-2xl flex flex-col overflow-hidden relative">
+
+      <!-- Ad Banner -->
+      <div class="flex items-center justify-center bg-gray-100 border-b p-2">
+        <div id="adBanner" class="flex items-center justify-center text-sm text-gray-600 bg-gray-300">Ad Banner</div>
+      </div>
+
+      <!-- PDF Viewer -->
+      <iframe id="pdfFrame" class="flex-1 w-full" loading="lazy"></iframe>
+
+      <!-- Watermark -->
+      <div class="absolute bottom-6 right-6 text-xs text-gray-400 opacity-60 pointer-events-none">© Downloaded from this site</div>
+
+      <!-- Close -->
+      <button id="closePdf" class="absolute top-4 right-4 bg-gradient-to-r from-indigo-600 via-blue-600 to-fuchsia-600 text-white rounded-full w-10 h-10 flex items-center justify-center shadow-lg">✕</button>
+    </div>
   </div>
+<script>
+document.addEventListener('DOMContentLoaded', function () {
 
+  /* ================= ASIN FROM URL ================= */
+  const path = location.pathname.split('/').filter(Boolean);
+  const ASIN = /^[A-Z0-9]{10}$/i.test(path[path.length - 1])
+    ? path[path.length - 1]
+    : 'B0XXXXXXX';
+
+  /* ================= ELEMENTS ================= */
+  const openPdf = document.getElementById('openPdf');
+  const bookTitle = document.getElementById('bookTitle');
+  const ratingValue = document.getElementById('ratingValue');
+  const downloadCount = document.getElementById('downloadCount');
+  const cover = document.getElementById('bookCover');
+  const reviewEl = document.querySelector('#reviewSlider .review');
+
+  /* ================= IMAGE ================= */
+  cover.loading = 'lazy';
+  cover.decoding = 'async';
+  cover.src = `https://images-na.ssl-images-amazon.com/images/P/${ASIN}.01.LZZZZZZZ.jpg`;
+  cover.onerror = () => cover.src = '/images/placeholder.jpg';
+
+  /* ================= PDF ================= */
+  const pdfUrl = `/filebookpdf.pdf`;
+
+  /* ================= TEXT ================= */
+  bookTitle.textContent = `PDF Download (${ASIN})`;
+  ratingValue.textContent = (Math.random() * 0.3 + 4.6).toFixed(1);
+  downloadCount.textContent =
+    (Math.floor(Math.random() * 1200) + 100).toLocaleString();
+
+  /* ================= REVIEWS ================= */
+  const names = ['Alex M.', 'Sarah K.', 'Daniel R.', 'Emily T.', 'Michael B.'];
+  const reviews = [
+    'Very helpful and easy to read.',
+    'Well explained and structured.',
+    'Great reference material.',
+    'Clear and informative content.',
+    'Worth downloading.'
+  ];
+
+  const rand = a => a[Math.floor(Math.random() * a.length)];
+  const daysAgo = () => Math.floor(Math.random() * 7) + 1;
+
+  function renderReview() {
+    reviewEl.innerHTML = `
+      <strong>${rand(names)}</strong>
+      <span style="font-size:11px;color:#6b7280;"> · ${daysAgo()} days ago</span><br>
+      “${rand(reviews)}”<br>
+      <span style="color:#f59e0b;">★★★★★</span>
+      <span style="font-size:11px;color:#16a34a;"> Verified Reader</span>
+    `;
+  }
+
+  renderReview();
+
+  reviewEl.style.transition = 'transform .5s ease, opacity .5s ease';
+  setInterval(() => {
+    reviewEl.style.transform = 'translateY(-16px)';
+    reviewEl.style.opacity = '0';
+    setTimeout(() => {
+      renderReview();
+      reviewEl.style.transition = 'none';
+      reviewEl.style.transform = 'translateY(16px)';
+      reviewEl.style.opacity = '0';
+      void reviewEl.offsetWidth;
+      reviewEl.style.transition = 'transform .5s ease, opacity .5s ease';
+      reviewEl.style.transform = 'translateY(0)';
+      reviewEl.style.opacity = '1';
+    }, 500);
+  }, 3500);
+
+  /* ================= PDF READER ================= */
+  const pdfModal = document.createElement('div');
+  pdfModal.id = 'pdfReader';
+  pdfModal.innerHTML = `
+    <div class="pdf-wrapper">
+      <div class="pdf-ad">
+        <div class="ad-480x60">Ad 480x60</div>
+      </div>
+      <iframe src="${pdfUrl}"></iframe>
+      <button id="closePdf">✕</button>
+    </div>
+  `;
+  document.body.appendChild(pdfModal);
+
+  openPdf.addEventListener('click', () => {
+    pdfModal.classList.add('open');
+
+    if (window._Hasync) {
+      _Hasync.push(['Histats.track_event', 'open pdf reading', ASIN]);
+    }
+  });
+
+  pdfModal.addEventListener('click', e => {
+    if (e.target.id === 'closePdf' || e.target === pdfModal) {
+      pdfModal.classList.remove('open');
+    }
+  });
+
+  /* ================= SIMILAR BOOKS ================= */
+  const similarWrap = document.querySelector('.similar-list');
+  if (similarWrap) {
+    const asins = [
+      'B0A1B2C3D4','B09XYZ1234','B08ABC5678',
+      'B07LMN9012','B0QWE12345','B0RTY67890'
+    ].filter(a => a !== ASIN).sort(() => .5 - Math.random()).slice(0,4);
+
+    asins.forEach(a => {
+      similarWrap.innerHTML += `
+        <a href="https://mydomain.com/book/${a}" class="similar-item">
+          <img loading="lazy"
+               src="https://images-na.ssl-images-amazon.com/images/P/${a}.01._SX200_.jpg">
+          <span>View Book</span>
+        </a>
+      `;
+    });
+  }
+
+  /* ================= STYLES ================= */
+  const style = document.createElement('style');
+  style.textContent = `
+    #pdfReader{position:fixed;inset:0;background:rgba(0,0,0,.85);display:none;z-index:999;align-items:center;justify-content:center}
+    #pdfReader.open{display:flex}
+    .pdf-wrapper{width:92%;height:92%;background:#fff;border-radius:12px;overflow:hidden;position:relative;display:flex;flex-direction:column}
+    .pdf-ad{height:60px;display:flex;align-items:center;justify-content:center;background:#f3f4f6}
+    .ad-480x60{width:480px;height:60px;background:#d1d5db;display:flex;align-items:center;justify-content:center}
+    .pdf-wrapper iframe{flex:1;border:none}
+    #closePdf{position:absolute;top:10px;right:10px;width:32px;height:32px;border:none;border-radius:50%;background:#111;color:#fff;cursor:pointer}
+    .similar-list{display:grid;grid-template-columns:repeat(auto-fill,minmax(120px,1fr));gap:12px;margin-top:20px}
+    .similar-item{text-decoration:none;color:#111;text-align:center}
+    .similar-item img{width:100%;border-radius:8px}
+  `;
+  document.head.appendChild(style);
+
+});
+</script>
+<script>
+window._Hasync = window._Hasync || [];
+_Hasync.push(['Histats.start', '1,5003413,4,0,0,0,00010000']); // ← YOUR HISTATS ID
+_Hasync.push(['Histats.track_hits', '']);
+
+(function () {
+  var hs = document.createElement('script');
+  hs.async = true;
+  hs.src = '//s10.histats.com/js15_as.js';
+  document.body.appendChild(hs);
+})();
+</script>
 </body>
 </html>
