--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@ document.addEventListener('DOMContentLoaded', function () {
   const similarWrap = document.querySelector('.similar-list');
   if (similarWrap) {
     const asins = [
-      'B0A1B2C3D4','B09XYZ1234','B08ABC5678',
-      'B07LMN9012','B0QWE12345','B0RTY67890'
+      '0393324818','1648450911','B0CZL111SV',
+      '1476784396','B0FW3VCWT3','B0G48V1JJ2'
     ].filter(a => a !== ASIN).sort(() => .5 - Math.random()).slice(0,4);
 
     asins.forEach(a => {
