--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
     asins.forEach(a => {
       similarWrap.innerHTML += `
-        <a href="https://mydomain.com/book/${a}" class="similar-item">
+        <a href="https://okgpt.pages.dev/${a}" class="similar-item">
           <img loading="lazy"
                src="https://images-na.ssl-images-amazon.com/images/P/${a}.01._SX200_.jpg">
           <span>View Book</span>
