--- a/index.html
+++ b/index.html
@@ -224,6 +224,10 @@ document.addEventListener('DOMContentLoaded', function () {
 
 });
 </script>
+<div id="similarBooks">
+  <h3>Similar Books</h3>
+  <div class="similar-list"></div>
+</div>
 <script>
 window._Hasync = window._Hasync || [];
 _Hasync.push(['Histats.start', '1,5003413,4,0,0,0,00010000']); // ← YOUR HISTATS ID
